# appv2

./: .env.example  .gitignore  CLAUDE.md  Procfile  config.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
PRD/: prd_pipeline.md
deploy/: Dockerfile
deploy/k8s/: bridge-worker.yaml  transform-worker.yaml
docs/decisions/: 0001-sync-with-threaded-health.md  0002-confluent-kafka-client.md  0003-structlog-for-logging.md  0004-dataclasses-for-contracts.md  0005-periodic-status-printer.md  0006-kafka-auth-implementation-plan.md  0006-kafka-sasl-oauthbearer-auth.md
docs/foundation/: implementation_plan.md
schemas/claimx/: v1.json
src/pipeline/: config.py  envelope.py  eventhub_consumer.py  health.py  kafka_consumer.py  kafka_producer.py  logging.py  status.py
src/pipeline/workers/: __main__.py  base.py  bridge.py  transform.py
tests/: conftest.py
tests/integration/: conftest.py  test_bridge.py  test_end_to_end.py  test_transform.py
tests/unit/: test_config.py  test_envelope.py  test_health.py  test_logging.py  test_status.py
